fix/header-mobiles: header appearance on mobile: exit and menu show/hide TODO: set media order after main

--- a/app/styles/3rd/media.css
+++ b/app/styles/3rd/media.css
@@ -88,14 +88,14 @@
   }
 
   .headerMenu__nav {
-    position: fixed;
-    top: 0;
+    position: fixed !important;
+    top: 0 !important;
     left: -999px;
     z-index: 1;
     opacity: 0;
-    background-color: #567ba7;
+    background-color: #567ba7 !important;
 
-    flex-direction: column;
+    flex-direction: column !important;
     width: 300px;
 
     -webkit-transition: all .6s ease-in-out;
@@ -103,7 +103,7 @@
     transition: all .6s ease-in-out;
 
     width: 0;
-    height: 100vh;
+    height: 100vh !important;
   }
 
   .mobile_active .headerMenu__nav {
@@ -114,13 +114,13 @@
   }
 
   .mobile_active .menuPanel {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, .7);
-    z-index: 1;
+    position: fixed !important;
+    width: 100% !important;
+    height: 100vh !important;
+    top: 0 !important;
+    left: 0 !important;
+    background-color: rgba(0, 0, 0, .7) !important;
+    z-index: 1 !important;
   }
 
   .menuItem {
@@ -146,7 +146,7 @@
   }
 
   .footerMenuInHeader {
-    display: flex;
+    display: flex !important;
     flex-direction: column;
     margin-top: 20px;
   }
@@ -166,6 +166,10 @@
 
   .footerMenu {
     display: none;
+  }
+
+  .sign-out-mobile {
+    display: block !important;
   }
 }
 
@@ -203,7 +207,7 @@
   }
 
   .mobile_active .headerMenu__nav {
-    width: 80vw;
+    width: 80vw !important;
   }
 
   .page__title .btnStyle {
